# pbad-2d-bin-packing

./: .gitignore  CMakeLists.txt  Generator.cpp  Generator.h  NeuralNetwork.cpp  NeuralNetwork.h  Palette.cpp  Palette.h  Pallette.cpp  Pallette.h  README.md  main.cpp  test-build.sh
include/libcmaes/: eigenmvn.h  eo_matrix.h  surrcmaes.h  test.sh
include/libcmaes/surrogates/: rankingsvm.hpp  rsvm_surr_strategy.hpp
lib/pkgconfig/: libcmaes.pc
maxRect/: index.html  index.js  package.json  pnpm-lock.yaml  tasks.js
maxRect/data/: items.json  items_c.json  paletteSizes.json  paletteSizes_c.json
scripts/: printer.py
